<resources>
    <string name="app_name">ToDoListApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="All_Task_List">All Task List</string>
    <string name="Add_Task">Add Task</string>
    <string name="Filtered_View">Filtered View</string>
    <string name="title_activity_create_or_edit_task">CreateOrEditTask</string>
    <string name="Create_Or_Edit_Task">Create or Edit Task</string>
    <string name="Enter_Task_Name">Task Name</string>
    <string name="Task_State">Task State</string>
    <string name="Active">Active</string>
    <string name="In_Progress">In Progress</string>
    <string name="Completed">Completed</string>
    <string name="SaveTask">Save Task</string>
    <string name="Delete_Task">Delete Task</string>
    <string name="List_ID">ID</string>
    <string name="List_TaskName" />
    <string name="list_TaskName" />
    <string name="list_TaskID" />
    <string name="title_activity_filtered_view_option">FilteredViewOption</string>
    <string name="title_activity_filtered_list">FilteredList</string>
</resources>
