<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.veenamathews.todolistapp.CreateOrEditTask">

    <TextView android:text="@string/Create_Or_Edit_Task" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff497f"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Enter_Task_Name"
        android:id="@+id/textView3"
        android:textColor="#ff497f"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Task_State"
        android:id="@+id/textView4"
        android:textColor="#ff497f"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Active"
        android:id="@+id/Active"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:checked="true"
        android:textColor="#ff497f" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/In_Progress"
        android:id="@+id/In_Progress"
        android:layout_below="@+id/Active"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textColor="#ff497f" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Completed"
        android:id="@+id/Completed"
        android:layout_below="@+id/In_Progress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textColor="#ff497f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveTask"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:textColor="#8438ff"
        android:singleLine="true"
        android:contextClickable="true"
        android:clickable="true"
        android:onClick="onClickSaveButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Task"
        android:id="@+id/button4"
        android:singleLine="true"
        android:textColor="#8438ff"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"
        android:clickable="true"
        android:contextClickable="true"
        android:onClick="onClickDeleteButton" />

</RelativeLayout>
